<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_detail_photo"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="6dp"
            android:paddingEnd="6dp">

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/nama_filmnya"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detail_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_gravity="start"
                android:text="@string/release_filmnya"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_detail_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:text="@string/genre_filmnya"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_detail_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingStart="6dp"
            android:text="@string/rating_filmnya"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/deskripsi_film"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/deskripsi_filmnya"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>