<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginBottom="25dp"
    android:layout_marginTop="25dp"
    android:background="@drawable/bg_item_white"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_item_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/placeholder"
        android:background="@drawable/bg_rounded_photo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/iv_item_photo"
        android:layout_toRightOf="@id/iv_item_photo"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_filmnya"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_item_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre_filmnya"
            android:textSize="16sp"
            android:textColor="@color/Gray" />

        <TextView
            android:id="@+id/tv_item_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/rating_filmnya"
            android:background="@drawable/bg_rounded_orange"/>
    </LinearLayout>
</RelativeLayout>